--- a/client/main.html
+++ b/client/main.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="google" content="notranslate" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
-  <title>DEV Dashboard</title>
+  <title>Dashboard</title>
   <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="/bower_components/chroma-js/chroma.js"></script>
   <script src="/bower_components/d3/d3.js"></script>
