--- a/client/main.html
+++ b/client/main.html
@@ -3,15 +3,15 @@
   <meta name="google" content="notranslate" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <title>Dashboard</title>
-  <script src="/biochemie/bower_components/webcomponentsjs/webcomponents.js"></script>
-  <script src="/biochemie/bower_components/chroma-js/chroma.js"></script>
-  <script src="/biochemie/bower_components/d3/d3.js"></script>
-  <script src="/biochemie/bower_components/pixi.js/bin/pixi.js"></script>
+  <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="/bower_components/chroma-js/chroma.js"></script>
+  <script src="/bower_components/d3/d3.js"></script>
+  <script src="/bower_components/pixi.js/bin/pixi.js"></script>
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:900,400,300,100' type='text/css'>
-  <link rel="import" href="/biochemie/bower_components/paper-material/paper-material.html">
-  <link rel="import" href="/biochemie/bower_components/paper-progress/paper-progress.html">
-  <link rel="import" href="/biochemie/bower_components/paper-spinner/paper-spinner.html">
-  <link rel="import" href="/biochemie/bower_components/paper-input/paper-input.html">
+  <link rel="import" href="/bower_components/paper-material/paper-material.html">
+  <link rel="import" href="/bower_components/paper-progress/paper-progress.html">
+  <link rel="import" href="/bower_components/paper-spinner/paper-spinner.html">
+  <link rel="import" href="/bower_components/paper-input/paper-input.html">
   <script src="https://use.fontawesome.com/776485a324.js"></script>
   <style is="custom-style">
     paper-progress {
