cse credits shown. sliders added for planning. takes into account max 180 and y1 does not go lower than original. todo: make pretty

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -43,6 +43,8 @@
   {{/unless}}
 
 
+
+
 </div>
 <div class="flex-row">
 <div class="flex-column column-even colijkingstoets">
@@ -109,7 +111,7 @@
 </div>
 {{/if}}
 {{#if ShowSeptember}}
-<div class="flex-column column-even colsep">
+<div class="flex-column column-even colsept">
 <h2>3e examenperiode</h2>
 <div class="CSE">
   {{#with CSE_september}}
@@ -132,6 +134,7 @@
         <div class="loading"><paper-spinner alt="Loading" active></paper-spinner></div>
       {{/if}}
 </div>
+
 {{/if}}
 <div class="flex-column  column-even colfail">
 <h2>Onsuccesvolle examens</h2>
@@ -155,7 +158,15 @@
       {{/if}}
 </div>
 
+{{#if ShowSeptember}}
+<div class="flex-column column-even colsept">
+<h2>Studiepunt planning</h2>
+<div class="CSE">
 
+</div>
+ {{> cseplanning}}
+</div>
+{{/if}}
 {{#unless ShowSeptember}}
 <div class="flex-column planning-column colfail2">
   <h2>Onsuccesvolle examens</h2>
@@ -196,7 +207,7 @@
   {{/if}}
   {{#if ShowSeptember}}
   <!--{{#if Fails}}-->
-  <div class="flex-item bottomheader"></div>
+  <div class="flex-item bottomheader"><a  class="hider" href="#" onclick="if($('.colsept').css('visibility') == 'visible'){$('.colsept').css('visibility','hidden');}else{$('.colsept').css('visibility','visible');}">.x.</a></div>
   {{/if}}
   <div class="flex-item bottomheader"><a  class="hider" href="#" onclick="if($('.colfail').css('visibility') == 'visible'){$('.colfail').css('visibility','hidden');}else{$('.colfail').css('visibility','visible');}">.x.</a></div>
     <div class="flex-item bottomheader"><a class="hider"  href="#" onclick="if($('.colfail2').css('visibility') == 'visible'){$('.colfail2').css('visibility','hidden');}else{$('.colfail2').css('visibility','visible');}">.x.</a></div>
