--- a/client/cseplanning/cseplanning.html
+++ b/client/cseplanning/cseplanning.html
@@ -1,10 +1,11 @@
 <template name="cseplanning">
 <div id="cseplanning">
-  <div id="cseslider_y1"></div>
-  <div id="cseslider_y2"></div>
-  <div id="cseslider_y3"></div>
-  <div id="cseslider_y4"></div>
-  <div id="cseslider_y5"></div>
-  <div>{{totalCSE}}</div>
+  <div class="slideflex"><span>jaar 1</span><div id="cseslider_y1"></div></div>
+  <div  class="slideflex"><span>jaar 2</span><div id="cseslider_y2"></div></div>
+  <div  class="slideflex"><span>jaar 3</span><div id="cseslider_y3"></div></div>
+  <div  class="slideflex"><span>jaar 5</span><div id="cseslider_y4"></div></div>
+  <div  class="slideflex"><span>jaar 4</span><div id="cseslider_y5"></div></div>
+  <div  class="slideflex slidetotal"><span>total</span><div id="slidetotal">{{totalCSE}}/180</div></div>
+
 </div>
 </template>
