this fix #6 updated headers

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -75,7 +75,7 @@
   {{/if}}
 </div>
 <div class="flex-column column-even coljan">
-<h2>Januari</h2>
+<h2>Januari <br> 1e examenperiode</h2>
 <div class="CSE">
 {{#with CSE_januari}}
   {{> CSE_bar }}
@@ -93,7 +93,7 @@
 </div>
 {{#if ShowJuni}}
 <div class="flex-column coljun">
-<h2>Juni</h2>
+<h2>Juni <br> 2e examenperiode</h2>
 <div class="CSE">
   {{#with CSE_juni}}
     {{> CSE_bar }}
@@ -112,7 +112,7 @@
 {{/if}}
 {{#if ShowSeptember}}
 <div class="flex-column column-even colsept">
-<h2>3e examenperiode</h2>
+<h2>Augustus <br> 3e examenperiode</h2>
 <div class="CSE">
   {{#with CSE_september}}
     {{> CSE_bar }}
