--- a/client/body/body.html
+++ b/client/body/body.html
@@ -137,7 +137,7 @@
 
 {{/if}}
 <div class="flex-column   colfail">
-<h2>Onsuccesvolle examens</h2>
+<h2>Onsuccesvolle vakken</h2>
 <div class="CSE">
 
 </div>
