--- a/client/student/student.html
+++ b/client/student/student.html
@@ -1,6 +1,7 @@
 <template name="student">
 <div id="student">
-  <i class="fa fa-user" aria-hidden="true"></i> <input type="text" placeholder="Student #" value="{{student}}">
+  <i class="fa fa-user" aria-hidden="true"></i>
   <span id="studentName">{{studentName}}</span>
+  <input type="text" placeholder="Student #" value="{{student}}">
 </div>
 </template>
