Fixed slider and top column icons

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -46,7 +46,7 @@
 <div class="flex-row">
 <div class="flex-column column-even colijkingstoets">
   <div class="top">
-  <div class="fa fa-compress"></div>
+  <div class="fa fa-compress"><paper-ripple></paper-ripple></div>
   <div class="column-title">IJkingstoets</div>
   <div class="CSE"></div>
   </div>
@@ -62,7 +62,7 @@
 </div>
 <div class="flex-column colttt">
   <div class="top">
-  <div class="fa fa-compress"></div>
+  <div class="fa fa-compress"><paper-ripple></paper-ripple></div>
   <div class="column-title">Tussentijdse Toetsen</div>
   <div class="CSE"></div>
   </div>
@@ -79,7 +79,7 @@
 </div>
 <div class="flex-column column-even coljan">
 <div class="top">
-<div class="fa fa-compress"></div>
+<div class="fa fa-compress"><paper-ripple></paper-ripple></div>
 <div class="column-title">Januari</div>
 <div class="periode">1e examenperiode</div>
 <div class="CSE">
@@ -101,7 +101,7 @@
 {{#if ShowJuni}}
 <div class="flex-column coljun">
 <div class="top">
-<div class="fa fa-compress"></div>
+<div class="fa fa-compress"><paper-ripple></paper-ripple></div>
 <div class="column-title">Juni</div>
 <div class="periode">2e examenperiode</div>
 <div class="CSE">
@@ -124,7 +124,7 @@
 {{#if ShowSeptember}}
 <div class="flex-column column-even colsept">
 <div class="top">
-<div class="fa fa-compress"></div>
+<div class="fa fa-compress"><paper-ripple></paper-ripple></div>
 <div class="column-title">Augustus</div>
 <div class="periode">3e examenperiode</div>
 <div class="CSE">
@@ -153,7 +153,7 @@
 {{/if}}
 <div class="flex-column   colfail">
 <div class="top">
-<div class="fa fa-compress"></div>
+<div class="fa fa-compress"><paper-ripple></paper-ripple></div>
 <div class="column-title">Onsuccesvolle vakken</div>
 <div class="CSE"></div>
 </div>
@@ -177,7 +177,7 @@
 {{#if ShowSeptember}}
 <div class="flex-column column-even colsept">
 <div class="top">
-<div class="fa fa-compress"></div>
+<div class="fa fa-compress"><paper-ripple></paper-ripple></div>
 <div class="column-title">Studiebelastingplanning</div>
 <div class="CSE"></div>
 </div>
