--- a/client/main.html
+++ b/client/main.html
@@ -11,6 +11,7 @@
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:900,400,300,100' type='text/css'>
   <link rel="import" href="/bower_components/paper-material/paper-material.html">
   <link rel="import" href="/bower_components/paper-progress/paper-progress.html">
+  <link rel="import" href="/bower_components/paper-ripple/paper-ripple.html">
   <link rel="import" href="/bower_components/paper-spinner/paper-spinner.html">
   <link rel="import" href="/bower_components/paper-input/paper-input.html">
   <link rel="stylesheet" href="/d3slider/d3.slider.css" />
