--- a/client/cseplanning/cseplanning.html
+++ b/client/cseplanning/cseplanning.html
@@ -1,11 +1,38 @@
 <template name="cseplanning">
-<div id="cseplanning">
-  <div  class="slideflex"><span>jaar 1</span><div id="cseslider_y1"></div></div>
-  <div  class="slideflex"><span>jaar 2</span><div id="cseslider_y2"></div></div>
-  <div  class="slideflex"><span>jaar 3</span><div id="cseslider_y3"></div></div>
-  <div  class="slideflex"><span>jaar 4</span><div id="cseslider_y4"></div></div>
-  <div  class="slideflex"><span>jaar 5</span><div id="cseslider_y5"></div></div>
-  <div  class="slideflex slidetotal"><span>total</span><div id="slidetotal">{{totalCSE}}/180</div></div>
-
-</div>
+  <div id="cseplanning">
+    <div class="slideflex">
+      <div class="slider-top">
+      <span>jaar 1</span><div class="value"><span>{{jaar1}}</span>/60</div>
+      </div>
+      <div id="cseslider_y1"></div>
+    </div>
+    <div class="slideflex">
+      <div class="slider-top">
+      <span>jaar 2</span><div class="value"><span>{{jaar2}}</span>/72</div>
+      </div>
+      <div id="cseslider_y2"></div>
+    </div>
+    <div class="slideflex">
+      <div class="slider-top">
+      <span>jaar 3</span><div class="value"><span>{{jaar3}}</span>/72</div>
+      </div>
+      <div id="cseslider_y3"></div>
+    </div>
+    <div class="slideflex">
+      <div class="slider-top">
+      <span>jaar 4</span><div class="value"><span>{{jaar4}}</span>/72</div>
+      </div>
+      <div id="cseslider_y4"></div>
+    </div>
+    <div class="slideflex">
+      <div class="slider-top">
+      <span>jaar 5</span><div class="value"><span>{{jaar5}}</span>/72</div>
+      </div>
+      <div id="cseslider_y5"></div>
+    </div>
+    <div class="slidetotal">
+      <span>total</span>
+      <div id="slidetotal"><span>{{totalCSE}}</span>/180</div>
+    </div>
+  </div>
 </template>
