--- a/client/main.html
+++ b/client/main.html
@@ -15,6 +15,8 @@
   <link rel="import" href="/bower_components/paper-spinner/paper-spinner.html">
   <link rel="import" href="/bower_components/paper-input/paper-input.html">
   <link rel="stylesheet" href="/d3slider/d3.slider.css" />
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.0.4/wNumb.min.js'></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <script src="https://use.fontawesome.com/776485a324.js"></script>
   <style is="custom-style">
     paper-progress {
