minor design changes

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -155,6 +155,7 @@
 <div class="top">
 <div class="fa fa-compress"><paper-ripple></paper-ripple></div>
 <div class="column-title">Onsuccesvolle vakken</div>
+<div class="periode">2e jaar</div>
 <div class="CSE">
   {{#with CSE_september}}
     {{> CSE_bar }}
