--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -1,3 +1,3 @@
 <template name="resultGraph">
-  <div id="{{id}}_{{semester}}"></div>
+  <div id="{{id}}_{{semester}}" class="course"></div>
 </template>
