feedback failed courses

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -165,11 +165,11 @@
         <div class="top">
           <div class="fa fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">Onsuccesvolle vakken</div>
-          <div class="periode">2e jaar</div>
+          <!-- <div class="periode">2e jaar</div> -->
           <div class="CSE">
-            {{#with CSE_september}}
+            <!-- {{#with CSE_september}}
             {{> CSE_bar }}
-            {{/with}}
+            {{/with}} -->
           </div>
         </div>
         <div class="bottom">
