Large commit, new dashboard style, refactoring in process

--- a/client/course/ijkingstoets/ijkingstoets.html
+++ b/client/course/ijkingstoets/ijkingstoets.html
@@ -1,5 +1,5 @@
 <template name="ijkingstoets">
-
-    {{> resultGraph}}
-  
+  <div class="ijkingstoets">
+  {{> resultGraph}}
+  </div>
 </template>
