--- a/client/main.html
+++ b/client/main.html
@@ -15,6 +15,7 @@
   <link rel="import" href="/bower_components/paper-spinner/paper-spinner.html">
   <link rel="import" href="/bower_components/paper-input/paper-input.html">
   <link rel="stylesheet" href="/d3slider/d3.slider.css" />
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.0.4/wNumb.min.js'></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <style is="custom-style">
