--- a/client/future/future.html
+++ b/client/future/future.html
@@ -1,5 +1,13 @@
 <template name="future">
-  <svg id="bachelor" class="colfuture" height="200" width="20"></svg>
-  <!-- <div style="text-align:center"><a  class="hider" href="#" onclick="if($('.colfuture').css('visibility') == 'visible'){$('.colfuture').css('visibility','hidden');}else{$('.colfuture').css('visibility','visible');}">.x.</a> -->
-  <!-- </div> -->
+  <div id="profile" class="profile"> Jouw profiel: <div class="box"></div></div>
+  <div id="legend" class="futurelegend"></div>
+  <svg id="top" class="top"></svg>
+  <svg id="middle" class="middle"></svg>
+  <svg id="low" class="low"></svg>
+  
+  
+  
+  
+  <!-- <svg id="bachelor" class="colfuture" height="200" width="20"></svg> -->
+  
 </template>
