--- a/client/future/future.html
+++ b/client/future/future.html
@@ -1,10 +1,11 @@
 <template name="future">
-  <div id="profile" class="profile"> Jouw profiel: <div class="box"></div></div>
-  <div id="legend" class="futurelegend"></div>
-  <svg id="top" class="top"></svg>
-  <svg id="middle" class="middle"></svg>
-  <svg id="low" class="low"></svg>
-  
+  <div id="profile" class="profile"> Jouw profiel: <div id="profilebox" class="box"></div></div>
+  <!-- <div id="legend" class="futurelegend"></div> -->
+  <div id="fields" class='fields'> 
+    <svg id="best" class="flex-item best"></svg>
+    <svg id="middle" class="flex-item middle"></svg>
+    <svg id="low" class="flex-item low"></svg>
+</div>
   
   
   
